--- a/disassembler/CMakeLists.txt
+++ b/disassembler/CMakeLists.txt
@@ -47,14 +47,7 @@ endforeach()
 # BN_ARM64_DISASM_HDR added for Xcode project generation
 add_library(bn-arm64-disasm ${BN_ARM64_DISASM_SRC} ${BN_ARM64_DISASM_HDR})
 
+if (NOT CMAKE_CROSSCOMPILING)
 add_executable(bn-arm64-disasm-test test.c)
 target_link_libraries(bn-arm64-disasm-test bn-arm64-disasm)
-
-# target_link_libraries(jevmachopp PUBLIC arch_arm64 Boost::callable_traits enum.hpp fmt nanorange visit)
-# target_compile_definitions(jevmachopp PRIVATE USE_FMT=1)
-# target_compile_options(jevmachopp PRIVATE -Wall -Wextra -Wpedantic)
-# target_compile_options(jevmachopp PRIVATE -fno-rtti -fno-exceptions -fno-unwind-tables -fno-asynchronous-unwind-tables)
-
-# target_include_directories(jevmachopp PUBLIC ../../include ../../3rdparty/static_string/include ../../3rdparty/static_vector/include ../../3rdparty/hedley)
-
-# target_compile_options(jevmachopp PRIVATE -Xclang -fdump-record-layouts)
+endif()
